@@ -6,7 +6,7 @@ As of 1.17 CLM server is being renamed to Nexus IQ Server.
 System Requirements
 ===================
 
-Nexus IQ Server requires an Oracle Java 7 runtime update 21 as a minimum [2].
+Nexus IQ Server requires an Oracle Java 8 runtime update 45 as a minimum [2].
 
 Internet Explorer 9+ or equivalent modern browsers from other vendors will be required for proper interaction with the web application.
 
@@ -18,7 +18,6 @@ To start the Nexus IQ Server in a mode that is useful for a short evaluation run
 - listening on port 8070
 - log to the console and ./log/clm-server.log
 - data stored in ./sonatype-work/clm-server
-- Java MaxPermSize increased to accommodate generation of PDF reports
 
 Refer to the example config.yml in this bundle for additional options.
 
@@ -28,16 +27,6 @@ Authentication in the Nexus IQ Server
 Nexus IQ Server requires authentication to access the web interface.  The default username/password to access the system is admin/admin123
 It is recommended that you change this password after logging in.
 
-
-Configuration for PDF report generation
-=======================================
-
-The Nexus IQ Server is used to generate PDF documents of application composition reports.  This is done on demand and if you don't use this feature no configuration changes are necessary.  However if you plan on generating PDF reports you will likely need to increase the permgen memory available to the Nexus IQ Server.  In our testing a Sun/Oracle 1.7 64bit JVM appears to default to 85 MB of permgen and occasionally we hit that limit.
-
-This can be set when invoking java, with a Sun/Oracle JVM:
-    java -XX:MaxPermSize=128m -jar ${clm.server.jar} server config.yml
-
-
 Documentation and Support
 =========================
 
@@ -45,5 +34,5 @@ For more comprehensive documentation that includes full installation, configurat
 
 If you are experiencing trouble with any part of Sonatype Nexus Lifecycle, you can always visit our support site at http://links.sonatype.com/products/clm/support. There you can view our knowledge base and contact our support team directly.
 
-[1] Java SE 6 End of Public Updates Notice: http://www.oracle.com/technetwork/java/eol-135779.html
-[2] All Java 7 update releases: http://www.oracle.com/technetwork/java/javase/7u-relnotes-515228.html
+[1] Java SE 7 End of Public Updates Notice: http://www.oracle.com/technetwork/java/eol-135779.html
+[2] All Java 8 update releases: http://www.oracle.com/technetwork/java/javase/8u-relnotes-2225394.html
